--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 	<div class ="logotipo">
-		<img src="../..//Veronica/Logo mama/Logo_igv3.jpg" width="50%" alt="">
+		<img src="Logo_igv3.jpg" width="50%" alt="">
 	</div>
 	<div class="inicio"><a href="#">Inicio</a></div>
 	<div class="contenido"><a href="#">Contenido</a></div>
